v5.1.3
- Fixed - 

v5.1.2
- Fixed - Header classnames extra space 
- Fixed - Duotone output RGB SVG filter (was RRR)
- Fixed - Buttons border radius updated style output from normalized attributes
- Fixed - Fixed typography inline styles for font size, style and weight
- Added - Navigation Submenu for rendering Gutenberg submenu block with Boostrap markup
- Added - Ability to use FA/Glyphicons into navigation menus
- Updated - Masive improvements to Navigation menu functionality and code
- Updated - Gutenberg Blocks Styles into wp_enqueue_scripts hook instead of footer
- Updated - credits.tpl.php moved to "general" views folder

v5.1.1
- Added - Function to programatically update About page on WP.org

v5.1.0
- Added - Function to programatically update Homepage on WP.org

v5.0.8
- Fixed - Blocks custom gradient style output
- Added - Blocks sample gradients in theme.json
- Added - Content Only post/page template (for landing pages)
- Updated - blockGap to null to avoid outputing this

v5.0.7
- Cleanup - Some old Gutenberg unused CSS
- Cleanup - Starter content: remove customizer defaults for wp_parse_args (since it was removed)
- Fixed - Post title visual representation when is hidden on single template (Gubenberg Plugin)
- Fixed - Post title bottom margin (when blockGap is set to 0 - as we use it)
- Updated - Gallery Block: CSS support for upcomming image innerBlocks
- Updated - Header clean_head function to pass theme check
- Added - Theme starter content notification for "fresh sites"
- Removed - Credits for Google Fonts (was removed)

v5.0.6
- Cleanup - Customizer assets / Admin JS
- Updated - Better CSS/JS naming and folder structure
- Fixed - Textarea CSS
- Fixed - Activation Requirements

v5.0.0
- Complete rework to block based theme!!!

v4.1.7
- Updated - Add list-unstyled bootstrap class to comments listing by default
- Updated - Theme strings and errors: double check some missing translations