@@ -1,5 +1,6 @@
 v5.1.3
-- Fixed - 
+- Fixed - Navigation upcomming changes regarding open on hover/clicked
+- Updated - Navigation responsive offcanvas normalized / container changes
 
 v5.1.2
 - Fixed - Header classnames extra space 
